fixing collapse btn and full screen menu

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -77,10 +77,20 @@ body {
 }
 
 
+.navbar-toggler{
+border: 1px solid rgb(255,255,255);
 }
 .navstyle {
  margin-left: -65px;
  }
+ 
+ .burger_icon {
+  color: #fff;
+ }
+
+.navbar-collapse {
+    height: 100vh;
+}
 
 .nav-item span {
  display: block;
